updated the css styles for the main page to get them aligned correctly

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,34 @@
-header {
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column; 
+    min-height: 100vh;
+ }
+.index-header {
     background-color: black;
-    flex: 1;
     color: white;
     text-align: center;
+    padding: 10px;
 }
-body {
-   margin: 0;
-   padding: 0;
-   display: flex;
-   flex-direction: column; 
-   flex: 4;
-   text-align: center;
+.index-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
-main {
+.index-main {
     flex: 1;
     text-align: center;
 }
-
-footer {
-    position: relative;
+.index-footer {
     background: black;
     color: white;
     text-align: center;
-    margin: 10px;
     padding: 10px;
-    bottom: 0;
-    width: 100%;
+    margin-top: auto;
 }
-section {
-    flex: 1;
-    border: 1px solid #ccc;
-    padding: 10px;
+
+.homePage-header {
+    background-color: black;
 }
